# survive

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  readme.md
assets/: survice_map.csv  survice_map.tmx
assets/resources/: basic_tiles.xcf  icewater.xcf  snowland-inverted.xcf
include/array_list/: array_list.c  array_list.h
include/buffer/: buffer.c
include/cwalk/: cwalk.c
libs/: .gitignore
scripts/: class.lua  entity.lua  entity_finder.lua  init.lua  keyboard_handler.lua  types.lua  utils.lua
scripts/components/: locomotor.lua  sneaky.lua
src/ai/: follower.c  follower.h
src/coords/: coords.c  coords.h
src/core/: config.c  config.h  direction.h  global.h  print.c  print.h  types.h
src/entity/: entity.c  entity.h  movement.c  movement.h
src/game/: game.c  game.h
src/gfx/: animation.c  animation.h  draw.c  draw.h  texture.c  texture.h
src/input/: keyboard.c  keyboard.h  mouse.c  mouse.h
src/lua_engine/: fs.c  fs.h  funcs.h  game.i  game_wrap.c  lua_engine.c  lua_engine.h
src/main/: main.c
src/map/: loader.c  loader.h  map.c  map.h  path.c  path.h  stack.c  stack.h
src/screen/: screen.c  screen.h
src/time/: time.c  time.h
src/ui/: ui.c  ui.h
tools/: blender.py  diamond_crop.py  make_sprites.py  make_texture.py
